Smear bug #41406

Closed
opened 2014-08-11 21:36:18 +02:00 by Alexey · 9 comments

System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (2.71(9337574),2.70(19e627c)2.71.3(ee8dafe)and(3d4f540))
Worked: (2.69(r60995)) and all earlier

Soften and smear brushes in tex paint mode working very slow.
in 2.70 - slowly too, but no so strong.
in 2.69 - working fast and properly.
i used a standart image in uv map.(1024x1024)
use 32 bit float - is not important
i used 35 standart radius
strenght - use minimum - no so slow,else very slow

Exact steps for others to reproduce the error
open file and try to paint (soften draw) anywhere(and we will see this)smear_bug.blend

**System Information** windows7 64 ASUS ATI Radeon HD6870 **Blender Version** Broken: (2.71(9337574),2.70(19e627c)2.71.3(ee8dafe)and(3d4f540)) Worked: (2.69(r60995)) and all earlier Soften and smear brushes in tex paint mode working very slow. in 2.70 - slowly too, but no so strong. in 2.69 - working fast and properly. i used a standart image in uv map.(1024x1024) use 32 bit float - is not important i used 35 standart radius strenght - use minimum - no so slow,else very slow **Exact steps for others to reproduce the error** open file and try to paint (soften draw) anywhere(and we will see this)[smear_bug.blend](https://archive.blender.org/developer/F102488/smear_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Alexey self-assigned this 2014-08-11 21:36:18 +02:00
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77
Alexey was unassigned by Bastien Montagne 2014-08-11 22:21:16 +02:00
Antonis Ryakiotakis was assigned by Sergey Sharybin 2014-08-12 09:49:01 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Antony, mind having a glance?

Antony, mind having a glance?

Just a note here, this code did not do premultiplied and color space conversion for smear and smooth brushes. So was "faster" but surely not "properly". I tried a fix here but I'm not very happy yet. I'll have to revisit this report.

Just a note here, this code did not do premultiplied and color space conversion for smear and smooth brushes. So was "faster" but surely not "properly". I tried a fix here but I'm not very happy yet. I'll have to revisit this report.
Author

And else, in 2.71(2.71.3 too) blender don't start, if we don't switch on compatible with windows 7, in 2.70 and earlier - it is not important.

And else, in 2.71(2.71.3 too) blender don't start, if we don't switch on compatible with windows 7, in 2.70 and earlier - it is not important.

This issue was referenced by 4e3f76e06b

This issue was referenced by 4e3f76e06b6654d4951a54804eaa808b040ef942

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4e3f76e06b.

Closed by commit 4e3f76e06b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41406
No description provided.