source/blender/editors/sculpt_paint/paint_intern.h
@@ -287,7 +287,7 @@ typedef struct {
 	float *wdata; /* actual kernel */
 	int side; /* kernel side */
 	int side_squared; /* data side */
-	int pixel_len; /* pixels around center that kernel is wide */
+	float pixel_len; /* pixels around center that kernel is wide */
 } BlurKernel;
 
 enum BlurKernelType;
